# PSP-Bluetooth-Dongle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1  sdkconfig.esp32dev
.github/workflows/: esp-idf-latest.yaml
main/: CMakeLists.txt  Serial.cpp  Serial.h  commandManager.cpp  commandManager.h  controllerManager.cpp  controllerManager.h  sketch.cpp
main/commands/: commands_map.h  controllerData.cpp  controllerInfo.cpp  controllerLED.cpp  controllerPlayerLED.cpp  controllerVibrate.cpp  disconnectControllers.cpp  firmwareVersion.cpp  forgetBluetoothKeys.cpp  newConnectons.cpp  ping.cpp  responses.h
